--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -233,9 +233,9 @@ Result's function `getInitialState` provides access to the initial state value g
 ## Examples
 
 ```ts
-import { createSlice, createAction } from '@reduxjs/toolkit'
+import { createSlice, createAction, configureStore } from '@reduxjs/toolkit'
 import type { PayloadAction } from '@reduxjs/toolkit'
-import { configureStore, combineReducers } from 'redux'
+import { combineReducers } from 'redux'
 
 const incrementBy = createAction<number>('incrementBy')
 const decrementBy = createAction<number>('decrementBy')
