Add `settled` and `selectSlice` to docs.

--- a/docs/api/createAsyncThunk.mdx
+++ b/docs/api/createAsyncThunk.mdx
@@ -212,7 +212,7 @@ type RejectedWithValue = <ThunkArg, RejectedValue>(
 
 To handle these actions in your reducers, reference the action creators in `createReducer` or `createSlice` using the "builder callback" notation.
 
-```ts no-transpile {2,6,14,23}
+```ts no-transpile {2,10}
 const reducer1 = createReducer(initialState, (builder) => {
   builder.addCase(fetchUserById.fulfilled, (state, action) => {})
 })
@@ -223,6 +223,25 @@ const reducer2 = createSlice({
   reducers: {},
   extraReducers: (builder) => {
     builder.addCase(fetchUserById.fulfilled, (state, action) => {})
+  },
+})
+```
+
+Additionally, a `settled` matcher is attached, for matching against both fulfilled and rejected actions. Conceptually this is similar to a `finally` block.
+
+Make sure you use `addMatcher` instead of `addCase`, since `settled` is a matcher rather than an action creator.
+
+```ts no-transpile {2,10}
+const reducer1 = createReducer(initialState, (builder) => {
+  builder.addMatcher(fetchUserById.settled, (state, action) => {})
+})
+
+const reducer2 = createSlice({
+  name: 'users',
+  initialState,
+  reducers: {},
+  extraReducers: (builder) => {
+    builder.addMatcher(fetchUserById.settled, (state, action) => {})
   },
 })
 ```
