--- a/docs/migrations/1.x-to-2.x.md
+++ b/docs/migrations/1.x-to-2.x.md
@@ -14,72 +14,626 @@ toc_max_heading_level: 4
 
 ## Introduction
 
+<!-- TODO: some blurb here about how cool 2.0 is -->
+
 ## Breaking Changes
 
 ### Core, Toolkit and React Redux
 
-#### UMD build artifacts removed
+#### Action types _must_ be strings
 
-#### Modernised JS output targeting ES2020
+We've always specifically told our users that [actions and state _must_ be serializable](https://redux.js.org/style-guide/#do-not-put-non-serializable-values-in-state-or-actions), and that `action.type` _should_ be a string. This is both to ensure that actions are serializable, and to help provide a readable action history in the Redux DevTools.
+
+`store.dispatch(action)` now specifically enforces that `action.type` _must_ be a string and will throw an error if not, in the same way it throws an error if the action is not a plain object.
+
+In practice, this was already true 99.99% of the time and shouldn't have any effect on users (especially those using Redux Toolkit and `createSlice`), but there may be some legacy Redux codebases that opted to use Symbols as action types.
+
+#### Dropping UMD builds
+
+Redux has always shipped with UMD build artifacts. These are primarily meant for direct import as script tags, such as in a CodePen or a no-bundler build environment.
+
+For now, we're dropping those build artifacts from the published package, on the grounds that the use cases seem pretty rare today.
+
+We do have a browser-ready ESM build artifact included at dist/redux.browser.mjs, which can be loaded via a script tag that points to that file on Unpkg.
+
+If you have strong use cases for us continuing to include UMD build artifacts, please let us know!
+
+#### Build Artifact Modernization
+
+We've updated the build output in several ways:
+
+- **Build output is no longer transpiled!** Instead we target modern JS syntax (ES2020)
+- Moved all build artifacts to live under ./dist/, instead of separate top-level folders
+- The lowest Typescript version we test against is now 4.7
 
 #### Addition of `exports` field in `package.json`
 
+We've migrated the package definitions to be a full `{type: "module"}` ESM package with an `exports` field (with CJS still included for compatibility purposes).
+
+We've done local testing of the package, but we ask the community to try out this in your own projects and report any breakages you find!
+
 #### Error message extraction
 
-#### Action types must be strings
+Redux 4.1.0 optimized its bundle size by [extracting error message strings out of production builds](https://github.com/reduxjs/redux/releases/tag/v4.1.0), based on React's approach. We've applied the same technique to RTK. This saves about 1000 bytes from prod bundles (actual benefits will depend on which imports are being used).
+
+#### Internal listener implementation
+
+The Redux store has always used an array to track listener callbacks, and used `listeners.findIndex` to remove listeners on unsubscribe. As we found in React Redux, that can have perf issues when many listeners are unsubscribing at once.
+
+In React Redux, we fixed that with a more sophisticated linked list approach. Here, we've updated the listeners to be stored in a `Map` instead, which has better delete performance than an array.
+
+In practice this shouldn't have any real effect, because React Redux sets up a subscription in `<Provider>`, and all nested components subscribe to that. But, nice to fix it here as well.
 
 <div class="typescript-only">
 
 #### Typescript rewrite
 
-#### `Middleware` type changed
+In 2019, we began a community-powered conversion of the Redux codebase to TypeScript. The original effort was discussed in [#3500: Port to TypeScript](https://github.com/reduxjs/redux/issues/3500), and the work was integrated in PR [#3536: Convert to TypeScript](https://github.com/reduxjs/redux/issues/3536).
+
+However, the TS-converted code in master has sat around since then, unused and unpublished, due to concerns about possible compatibility issues with the existing ecosystem (as well as general inertia on our part).
+
+Redux core v5 is now built from that converted source code. In theory, this should be almost identical in both runtime behavior and types to the 4.x build, but it's very likely that some of the changes may cause types issues.
+
+Please report any unexpected compatibility issues on [Github](https://github.com/reduxjs/redux/issues)!
+
+#### `Middleware` type changed - Middleware `action` and `next` are typed as `unknown`
+
+Previously, the `next` parameter is typed as the `D` type parameter passed, and `action` is typed as the `Action` extracted from the dispatch type. Neither of these are a safe assumption:
+
+- `next` would be typed to have **all** of the dispatch extensions, including the ones earlier in the chain that would no longer apply.
+  - Technically it would be _mostly_ safe to type `next` as the default Dispatch implemented by the base redux store, however this would cause `next(action)` to error (as we cannot promise `action` is actually an `Action`) - and it wouldn't account for any following middlewares that return anything other than the action they're given when they see a specific action.
+- `action` is not necessarily a known action, it can be literally anything - for example a thunk would be a function with no `.type` property (so `AnyAction` would be inaccurate)
+
+We've changed `next` to be `(action: unknown) => unknown` (which is accurate, we have no idea what `next` expects or will return), and changed the `action` parameter to be `unknown` (which as above, is accurate).
+
+This new type is incompatible with the v4 `Middleware` type, so if a package's middleware is saying it's incompatible, check which version of Redux it's getting its types from!
 
 #### `PreloadedState` type removed in favour of `Reducer` generic
 
+We've made tweaks to the TS types to improve type safety and behavior.
+
+First, the `Reducer` type now has a `PreloadedState` possible generic:
+
+```ts
+type Reducer<S, A extends Action, PreloadedState = S> = (
+  state: S | PreloadedState | undefined,
+  action: A
+) => S
+```
+
+Per the explanation in [#4491](https://github.com/reduxjs/redux/pull/4491):
+
+Why the need for this change? When the store is first created by `createStore`/`configureStore`, the initial state is set to whatever is passed as the `preloadedState` argument (or `undefined` if nothing is passed). That means that the first time that the reducer is called, it is called with the `preloadedState`. After the first call, the reducer is always passed the current state (which is `S`).
+
+For most normal reducers, `S | undefined` accurately describes what can be passed in for the `preloadedState`. However the `combineReducers` function allows for a preloaded state of `Partial<S> | undefined`.
+
+The solution is to have a separate generic that represents what the reducer accepts for its preloaded state. That way `createStore` can then use that generic for its `preloadedState` argument.
+
+Previously, this was handled by a `$CombinedState` type, but that complicated things and led to some user-reported issues. This removes the need for `$CombinedState` altogether.
+
+This change does include some breaking changes, but overall should not have a huge impact on users upgrading in user-land:
+
+- The `Reducer`, `ReducersMapObject`, and `createStore`/`configureStore` types/function take an additional `PreloadedState` generic which defaults to `S`.
+- The overloads for `combineReducers` are removed in favor of a single function definition that takes the `ReducersMapObject` as its generic parameter. Removing the overloads was necessary with these changes, since sometimes it was choosing the wrong overload.
+- Enhancers that explicitly list the generics for the reducer will need to add the third generic.
+
 #### `AnyAction` deprecated in favour of `UnknownAction`
+
+The Redux TS types have always exported an `AnyAction` type, which is defined to have `{type: string}` and treat any other field as `any`. This makes it easy to write uses like `console.log(action.whatever)`, but unfortunately does not provide any meaningful type safety.
+
+We now export an `UnknownAction` type, which treats all fields other than `action.type` as `unknown`. This encourages users to write type guards that check the action object and assert its _specific_ TS type. Inside of those checks, you can access a field with better type safety.
+
+`UnknownAction` is now the default any place in the Redux source that expects an action object.
+
+`AnyAction` still exists for compatibility, but has been marked as deprecated.
+
+Note that [Redux Toolkit's action creators have a `.match()` method](https://redux-toolkit.js.org/api/createAction#actioncreatormatch) that acts as a useful type guard:
+
+```ts
+if (todoAdded.match(someUnknownAction)) {
+  // action is now typed as a PayloadAction<Todo>
+}
+```
 
 </div>
 
 ### Toolkit only
 
-#### Object syntax for `extraReducers` and `createReducer` removed
+#### Object syntax for `createSlice.extraReducers` and `createReducer` removed
+
+RTK's `createReducer` API was originally designed to accept a lookup table of action type strings to case reducers, like `{ "ADD_TODO": (state, action) => {} }`. We later added the "builder callback" form to allow more flexibility in adding "matchers" and a default handler, and did the same for `createSlice.extraReducers`.
+
+We have removed the "object" form for both `createReducer` and `createSlice.extraReducers` in RTK 2.0, as the builder callback form is effectively the same number of lines of code, and works much better with TypeScript.
+
+As an example, this:
+
+```ts
+const todoAdded = createAction('todos/todoAdded')
+
+createReducer(initialState, {
+  [todoAdded]: (state, action) => {},
+})
+
+createSlice({
+  name,
+  initialState,
+  reducers: {
+    /* case reducers here */
+  },
+  extraReducers: {
+    [todoAdded]: (state, action) => {},
+  },
+})
+```
+
+should be migrated to:
+
+```ts
+createReducer(initialState, (builder) => {
+  builder.addCase(todoAdded, (state, action) => {})
+})
+
+createSlice({
+  name,
+  initialState,
+  reducers: {
+    /* case reducers here */
+  },
+  extraReducers: (builder) => {
+    builder.addCase(todoAdded, (state, action) => {})
+  },
+})
+```
 
 ##### Codemods
 
-#### `middleware` and `enhancers` must be a callback
+To simplify upgrading codebases, we've published a set of codemods that will automatically transform the deprecated "object" syntax into the equivalent "builder" syntax.
+
+The codemods package is available on NPM as [`@reduxjs/rtk-codemods`](https://www.npmjs.com/package/@reduxjs/rtk-codemods). More details are available [here](../api/codemods).
+
+To run the codemods against your codebase, run `npx @reduxjs/rtk-codemods <TRANSFORM NAME> path/of/files/ or/some**/*glob.js.`
+
+Examples:
+
+```sh
+npx @reduxjs/rtk-codemods createReducerBuilder ./src
+
+npx @reduxjs/rtk-codemods createSliceBuilder ./packages/my-app/**/*.ts
+```
+
+We also recommend re-running Prettier on the codebase before committing the changes.
+
+These codemods should work, but we would greatly appreciate feedback from more real-world codebases!
+
+#### `configureStore.middleware` must be a callback
+
+Since the beginning, `configureStore` has accepted a direct array value as the `middleware` option. However, providing an array directly prevents `configureStore` from calling `getDefaultMiddleware()`. So, `middleware: [myMiddleware]` means there is no thunk middleware added (or any of the dev-mode checks).
+
+This is a footgun, and we've had numerous users accidentally do this and cause their apps to fail because the default middleware never got configured.
+
+As a result, we've now made the `middleware` only accept the callback form. _If_ for some reason you still want to replace _all_ of the built-in middleware, do so by returning an array from the callback:
+
+```ts
+const store = configureStore({
+  reducer,
+  middleware: (getDefaultMiddleware) => {
+    // WARNING: this means that _none_ of the default middleware are added!
+    return [myMiddleware]
+    // or for TS users, use:
+    // return new Tuple(myMiddleware)
+  },
+})
+```
+
+But note that **we consistently recommend not replacing the default middleware entirely**, and that you should use `return getDefaultMiddleware().concat(myMiddleware)`.
+
+#### `configureStore.enhancers` must be a callback
+
+Similarly to `configureStore.middleware`, the `enhancers` field must also be a callback, for the same reasons.
+
+The callback will receive a `getDefaultEnhancers` function that can be used to customise the batching enhancer [that's now included by default](#configurestore-adds-autobatchenhancer-by-default).
+
+For example:
+
+```ts
+const store = configureStore({
+  reducer,
+  enhancers: (getDefaultEnhancers) => {
+    return getDefaultEnhancers({
+      autoBatch: { type: 'tick' },
+    }).concat(myEnhancer)
+  },
+})
+```
+
+It's important to note that the result of `getDefaultEnhancers` will **also** contain the middleware enhancer created with any configured/default middleware. To help prevent mistakes, `configureStore` will log an error to console if middleware was provided and the middleware enhancer wasn't included in the callback result.
+
+```ts
+const store = configureStore({
+  reducer,
+  enhancers: (getDefaultEnhancers) => {
+    return [myEnhancer] // we've lost the  middleware here
+    // instead:
+    return getDefaultEnhancers().concat(myEnhancer)
+  },
+})
+```
 
 #### Standalone `getDefaultMiddleware` and `getType` removed
+
+The standalone version of `getDefaultMiddleware` has been deprecated since v1.6.1, and has now been removed. Use the function passed to the `middleware` callback instead, which has the correct types.
+
+We have also removed the `getType` export, which was used to extract a type string from action creators made with `createAction`. Instead, use the static property `actionCreator.type`.
 
 #### RTK Query tag invalidation behaviour
 
 #### `reactHooksModule` custom hook configuration
 
+Previously, custom versions of React Redux's hooks (`useSelector`, `useDispatch`, and `useStore`) could be passed separately to `reactHooksModule`, usually to enable using a different context to the default `ReactReduxContext`.
+
+The react hooks module requires all three of these hooks to be provided, and it became an easy mistake to only pass `useSelector` and `useDispatch`, without `useStore`.
+
+The module has now moved all three of these under the same configuration key, and will check that all three are provided if the key is present.
+
+```ts
+// previously
+const customCreateApi = buildCreateApi(
+  coreModule(),
+  reactHooksModule({
+    useDispatch: createDispatchHook(MyContext),
+    useSelector: createSelectorHook(MyContext),
+    useStore: createStoreHook(MyContext),
+  })
+)
+
+// now
+const customCreateApi = buildCreateApi(
+  coreModule(),
+  reactHooksModule({
+    hooks: {
+      useDispatch: createDispatchHook(MyContext),
+      useSelector: createSelectorHook(MyContext),
+      useStore: createStoreHook(MyContext),
+    },
+  })
+)
+```
+
 <div class="typescript-only">
 
 #### Non-default middleware/enhancers must use `Tuple`
+
+We've seen many cases where users passing the `middleware` parameter to configureStore have tried spreading the array returned by `getDefaultMiddleware()`, or passed an alternate plain array. This unfortunately loses the exact TS types from the individual middleware, and often causes TS problems down the road (such as `dispatch` being typed as `Dispatch<AnyAction>` and not knowing about thunks).
+
+`getDefaultMiddleware()` already used an internal `MiddlewareArray` class, an `Array` subclass that had strongly typed `.concat/prepend()` methods to correctly capture and retain the middleware types.
+
+We've renamed that type to `Tuple`, and `configureStore`'s TS types now require that you _must_ use `Tuple` if you want to pass your own array of middleware:
+
+```ts
+import { configureStore, Tuple } from '@reduxjs/toolkit'
+
+configureStore({
+  reducer: rootReducer,
+  middleware: (getDefaultMidldeware) => new Tuple(additionalMiddleware, logger),
+})
+```
+
+(Note that this has no effect if you're using RTK with plain JS, and you could still pass a plain array here.)
+
+This same restriction applies to the `enhancers` field.
+
+#### Entity adapter type updates
+
+`createEntityAdapter` now has an `Id` generic argument, which will be used to strongly type the item IDs anywhere those are exposed. Previously, the ID field type was always `string | number`. TS will now try to infer the exact type from either the `.id` field of your entity type, or the `selectId` return type. You could also fall back to passing that generic type directly.
+
+The `.entities` lookup table is now defined to use a standard TS `Record<Id, MyEntityType>`, which assumes that each item lookup exists by default. Previously, it used a `Dictionary<MyEntityType>` type, which assumed the result was `MyEntityType | undefined`. The `Dictionary` type has been removed.
+
+If you prefer to assume that the lookups _might_ be undefined, use TypeScript's `noUncheckedIndexedAccess` configuration option to control that.
 
 </div>
 
 ## Features
 
+<!-- TODO: some blurb here about how new features are only in toolkit(?) -->
+
 ### `combineSlices` API with slice reducer injection for code-splitting
+
+The Redux core has always included `combineReducers`, which takes an object full of "slice reducer" functions and generates a reducer that calls those slice reducers. RTK's `createSlice` generates slice reducers + associated action creators, and we've taught the pattern of exporting individual action creators as named exports and the slice reducer as a default export. Meanwhile, we've never had official support for lazy-loading reducers, although we've had [sample code for some "reducer injection" patterns in our docs](https://redux.js.org/usage/code-splitting).
+
+This release includes a new [`combineSlices`](../api/combineSlices) API that is designed to enable lazy-loading of reducers at runtime. It accepts individual slices or an object full of slices as arguments, and automatically calls `combineReducers` using the `sliceObject.name` field as the key for each state field. The generated reducer function has an additional `.inject()` method attached that can be used to dynamically inject additional slices at runtime. It also includes a `.withLazyLoadedSlices()` method that can be used to generate TS types for reducers that will be added later. See [#2776](https://github.com/reduxjs/redux-toolkit/issues/2776) for the original discussion around this idea.
+
+For now, we are not building this into `configureStore`, so you'll need to call `const rootReducer = combineSlices(.....)` yourself and pass that to `configureStore({reducer: rootReducer})`.
+
+**Basic usage: a mixture of slices and standalone reducers passed to `combineSlices`**
+
+```ts
+const stringSlice = createSlice({
+  name: 'string',
+  initialState: '',
+  reducers: {},
+})
+
+const numberSlice = createSlice({
+  name: 'number',
+  initialState: 0,
+  reducers: {},
+})
+
+const booleanReducer = createReducer(false, () => {})
+
+const api = createApi(/*  */)
+
+const combinedReducer = combineSlices(
+  stringSlice,
+  {
+    num: numberSlice.reducer,
+    boolean: booleanReducer,
+  },
+  api
+)
+expect(combinedReducer(undefined, dummyAction())).toEqual({
+  string: stringSlice.getInitialState(),
+  num: numberSlice.getInitialState(),
+  boolean: booleanReducer.getInitialState(),
+  api: api.reducer.getInitialState(),
+})
+```
+
+**Basic slice reducer injection**
+
+```ts
+// Create a reducer with a TS type that knows `numberSlice` will be injected
+const combinedReducer =
+  combineSlices(stringSlice).withLazyLoadedSlices<
+    WithSlice<typeof numberSlice>
+  >()
+
+// `state.number` doesn't exist initially
+expect(combinedReducer(undefined, dummyAction()).number).toBe(undefined)
+
+// Create a version of the reducer with `numberSlice` injected (mainly useful for types)
+const injectedReducer = combinedReducer.inject(numberSlice)
+
+// `state.number` now exists, and injectedReducer's type no longer marks it as optional
+expect(injectedReducer(undefined, dummyAction()).number).toBe(
+  numberSlice.getInitialState()
+)
+
+// original reducer has also been changed (type is still optional)
+expect(combinedReducer(undefined, dummyAction()).number).toBe(
+  numberSlice.getInitialState()
+)
+```
 
 ### `selectors` field in `createSlice`
 
+The existing `createSlice` API now has support for defining [`selectors`](../api/createSlice#selectors) directly as part of the slice. By default, these will be generated with the assumption that the slice is mounted in the root state using `slice.name` as the field, such as `name: "todos"` -> `rootState.todos`. You can call `sliceObject.getSelectors(selectSliceState)` to generate the selectors with an alternate location, similar to how `entityAdapter.getSelectors()` works.
+
+```ts
+const slice = createSlice({
+  name: 'counter',
+  initialState: 42,
+  reducers: {},
+  selectors: {
+    selectSlice: (state) => state,
+    selectMultiple: (state, multiplier: number) => state * multiplier,
+  },
+})
+
+// Basic usage
+const testState = {
+  [slice.name]: slice.getInitialState(),
+}
+const { selectSlice, selectMultiple } = slice.selectors
+expect(selectSlice(testState)).toBe(slice.getInitialState())
+expect(selectMultiple(testState, 2)).toBe(slice.getInitialState() * 2)
+
+// Usage with the slice reducer mounted under a different key
+const customState = {
+  number: slice.getInitialState(),
+}
+const { selectSlice, selectMultiple } = slice.getSelectors(
+  (state: typeof customState) => state.number
+)
+expect(selectSlice(customState)).toBe(slice.getInitialState())
+expect(selectMultiple(customState, 2)).toBe(slice.getInitialState() * 2)
+```
+
 ### Callback syntax for `createSlice.reducers`
 
-### `createDynamicMiddleware`
+One of the oldest feature requests we've had is the ability to declare thunks directly inside of `createSlice`. Until now, you've always had to declare them separately, give the thunk a string action prefix, and handle the actions via `createSlice.extraReducers`:
+
+```ts
+// Declare the thunk separately
+const fetchUserById = createAsyncThunk(
+  'users/fetchByIdStatus',
+  async (userId: number, thunkAPI) => {
+    const response = await userAPI.fetchById(userId)
+    return response.data
+  }
+)
+
+const usersSlice = createSlice({
+  name: 'users',
+  initialState,
+  reducers: {
+    // standard reducer logic, with auto-generated action types per reducer
+  },
+  extraReducers: (builder) => {
+    // Add reducers for additional action types here, and handle loading state as needed
+    builder.addCase(fetchUserById.fulfilled, (state, action) => {
+      state.entities.push(action.payload)
+    })
+  },
+})
+```
+
+Many users have told us that this separation feels awkward.
+
+We've _wanted_ to include a way to define thunks directly inside of `createSlice`, and have played around with various prototypes. There were always two major blocking issues, and a secondary concern:
+
+1 It wasn't clear what the syntax for declaring a thunk inside should look like. 2. Thunks have access to `getState` and `dispatch`, but the `RootState` and `AppDispatch` types are normally inferred from the store, which in turn infers it from the slice state types. Declaring thunks inside `createSlice` would cause circular type inference errors, as the store needs the slice types but the slice needs the store types. We weren't willing to ship an API that would work okay for our JS users but not for our TS users, especially since we _want_ people to use TS with RTK. 3. You can't do synchronous conditional imports in ES modules, and there's no good way to make the `createAsyncThunk` import optional. Either `createSlice` always depends on it (and adds that to the bundle size), or it can't use `createAsyncThunk` at all.
+
+We've settled on these compromises:
+
+- You can declare thunks inside of createSlice.reducers, by using a "creator callback" syntax for the reducers field that is similar to the build callback syntax in RTK Query's createApi (using typed functions to create fields in an object). Doing this does look a bit different than the existing "object" syntax for the reducers field, but is still fairly similar.
+- You can customize some of the types for thunks inside of createSlice, but you cannot customize the state or dispatch types. If those are needed, you can manually do an as cast, like getState() as RootState.
+- In order to create async thunks with `createSlice`, you specifically need to [set up a version that uses `createAsyncThunk`](../api/createSlice#createasyncthunk).
+
+In practice, we hope these are reasonable tradeoffs. Creating thunks inside of `createSlice` has been widely asked for, so we think it's an API that will see usage. If the TS customization options are a limitation, you can still declare thunks outside of `createSlice` as always, and most async thunks don't need `dispatch` or `getState` - they just fetch data and return. And finally, setting up a custom `createSlice` allows you to opt into `createAsyncThunk` being included in your bundle size (though it may already be included if used directly or as part of RTK Query - in either of these cases there's no _additional_ bundle size).
+
+Here's what the new callback syntax looks like:
+
+```ts
+const createSlice = buildCreateSlice({
+  creators: { asyncThunk: asyncThunkCreator },
+})
+
+const todosSlice = createSlice({
+  name: 'todos',
+  initialState: {
+    loading: false,
+    todos: [],
+    error: null,
+  } as TodoState,
+  reducers: (create) => ({
+    // A normal "case reducer", same as always
+    deleteTodo: create.reducer((state, action: PayloadAction<number>) => {
+      state.todos.splice(action.payload, 1)
+    }),
+    // A case reducer with a "prepare callback" to customize the action
+    addTodo: create.preparedReducer(
+      (text: string) => {
+        const id = nanoid()
+        return { payload: { id, text } }
+      },
+      // action type is inferred from prepare callback
+      (state, action) => {
+        state.todos.push(action.payload)
+      }
+    ),
+    // An async thunk
+    fetchTodo: create.asyncThunk(
+      // Async payload function as the first argument
+      async (id: string, thunkApi) => {
+        const res = await fetch(`myApi/todos?id=${id}`)
+        return (await res.json()) as Item
+      },
+      // An object containing `{pending?, rejected?, fulfilled?, settled?, options?}` second
+      {
+        pending: (state) => {
+          state.loading = true
+        },
+        rejected: (state, action) => {
+          state.error = action.payload ?? action.error
+        },
+        fulfilled: (state, action) => {
+          state.todos.push(action.payload)
+        },
+        // settled is called for both rejected and fulfilled actions
+        settled: (state, action) => {
+          state.loading = false
+        },
+      }
+    ),
+  }),
+})
+
+// `addTodo` and `deleteTodo` are normal action creators.
+// `fetchTodo` is the async thunk
+export const { addTodo, deleteTodo, fetchTodo } = todosSlice.actions
+```
+
+#### Codemod
+
+Using the new callback syntax is entirely optional (the object syntax is still standard), but an existing slice would need to be converted before it can take advantage of the new capabilities this syntax provides. To make this easier, a [codemod](../api/codemods) is provided.
+
+```sh
+npx @reduxjs/rtk-codemods createSliceReducerBuilder ./src/features/todos/slice.ts
+```
+
+### "Dynamic middleware" middleware
+
+A Redux store's middleware pipeline is fixed at store creation time and can't be changed later. We _have_ seen ecosystem libraries that tried to allow dynamically adding and removing middleware, potentially useful for things like code splitting.
+
+This is a relatively niche use case, but we've built [our own version of a "dynamic middleware" middleware](../api/createDynamicMiddleware). Add it to the Redux store at setup time, and it lets you add and remove middleware later at runtime. It also comes with a [React hook integration that will automatically add a middleware to the store and return the updated dispatch method.](../api/createDynamicMiddleware#react-integration).
+
+```ts
+import { createDynamicMiddleware, configureStore } from '@reduxjs/toolkit'
+
+const dynamicMiddleware = createDynamicMiddleware()
+
+const store = configureStore({
+  reducer: {
+    todos: todosReducer,
+  },
+  middleware: (getDefaultMiddleware) =>
+    getDefaultMiddleware().prepend(dynamicMiddleware.middleware),
+})
+
+// later
+dynamicMiddleware.addMiddleware(someOtherMiddleware)
+```
 
 ### `configureStore` adds `autoBatchEnhancer` by default
 
+[In v1.9.0, we added a new `autoBatchEnhancer`](https://github.com/reduxjs/redux-toolkit/releases/tag/v1.9.0) that delays notifying subscribers briefly when multiple "low-priority" actions are dispatched in a row. This improves perf, as UI updates are typically the most expensive part of the update process. RTK Query marks most of its own internal actions as "low-pri" by default, but you have to have the `autoBatchEnhancer` added to the store to benefit from that.
+
+We've updated `configureStore` to add the `autoBatchEnhancer` to the store setup by default, so that users can benefit from the improved perf without needing to manually tweak the store config themselves.
+
+### `entityAdapter.getSelectors` accepts a `createSelector` function
+
+[`entityAdapter.getSelectors()`](../api/createEntityAdapter#selector-functions) now accepts an options object as its second argument. This allows you to pass in your own preferred `createSelector` method, which will be used to memoize the generated selectors. This could be useful if you want to use one of Reselect's new alternate memoizers, or some other memoization library with an equivalent signature.
+
 ### New dev checks in `reselect` v5
 
+Reselect v5 includes a dev-only check to check stability of input selectors, by running them an extra time with the same parameters, and checking that the result matches.
+
+This is important, as an input selector returning a materially different result with the same parameters means that the output selector will be run unnecessarily, thus (potentially) creating a new result and causing rerenders.
+
+```ts
+const addNumbers = createSelector(
+  // this input selector will always return a new reference when run
+  // so cache will never be used
+  (a, b) => ({ a, b }),
+  ({ a, b }) => ({ total: a + b })
+)
+// instead, you should have an input selector for each stable piece of data
+const addNumbersStable = createSelector(
+  (a, b) => a,
+  (a, b) => b,
+  (a, b) => ({
+    total: a + b,
+  })
+)
+```
+
+This is done the first time the selector is called, unless configured otherwise. More details are available in the [README](https://github.com/reduxjs/reselect#inputstabilitycheck).
+
+Note that RTK intentionally does not re-export the function to configure this check globally - if you wish to do so, you should instead depend on `reselect` directly and import it yourself.
+
 ### Immer 10.0
+
+[Immer 10.0](https://github.com/immerjs/immer/releases/tag/v10.0.0) is now final, and has several major improvements and updates:
+
+- Much faster update perf
+- Much smaller bundle size
+- Better ESM/CJS package formatting
+- No default export
+- No ES5 fallback
+
+We've updated RTK to depend on the final Immer 10.0 release.
 
 ## Recommendations
 
 ### Alternatives to `actionCreator.toString()`
 
-## Future plans - 3.0?
+## Future plans
+
+### Custom slice reducer creators
+
+### Selector factories
+
+### 3.0 - RTK Query
 
 </div>
