write toString alternatives section

--- a/docs/migrations/1.x-to-2.x.md
+++ b/docs/migrations/1.x-to-2.x.md
@@ -271,7 +271,7 @@ We have also removed the `getType` export, which was used to extract a type stri
 
 Previously, custom versions of React Redux's hooks (`useSelector`, `useDispatch`, and `useStore`) could be passed separately to `reactHooksModule`, usually to enable using a different context to the default `ReactReduxContext`.
 
-The react hooks module requires all three of these hooks to be provided, and it became an easy mistake to only pass `useSelector` and `useDispatch`, without `useStore`.
+In practicality, the react hooks module needs all three of these hooks to be provided, and it became an easy mistake to only pass `useSelector` and `useDispatch`, without `useStore`.
 
 The module has now moved all three of these under the same configuration key, and will check that all three are provided if the key is present.
 
@@ -478,8 +478,8 @@ We've _wanted_ to include a way to define thunks directly inside of `createSlice
 
 We've settled on these compromises:
 
-- You can declare thunks inside of createSlice.reducers, by using a "creator callback" syntax for the reducers field that is similar to the build callback syntax in RTK Query's createApi (using typed functions to create fields in an object). Doing this does look a bit different than the existing "object" syntax for the reducers field, but is still fairly similar.
-- You can customize some of the types for thunks inside of createSlice, but you cannot customize the state or dispatch types. If those are needed, you can manually do an as cast, like getState() as RootState.
+- You can declare thunks inside of `createSlice.reducers`, by using a "creator callback" syntax for the `reducers` field that is similar to the `build` callback syntax in RTK Query's `createApi` (using typed functions to create fields in an object). Doing this does look a bit different than the existing "object" syntax for the `reducers` field, but is still fairly similar.
+- You can customize _some_ of the types for thunks inside of `createSlice`, but you _cannot_ customize the `state` or `dispatch` types. If those are needed, you can manually do an `as` cast, like `getState() as RootState`.
 - In order to create async thunks with `createSlice`, you specifically need to [set up a version that uses `createAsyncThunk`](../api/createSlice#createasyncthunk).
 
 In practice, we hope these are reasonable tradeoffs. Creating thunks inside of `createSlice` has been widely asked for, so we think it's an API that will see usage. If the TS customization options are a limitation, you can still declare thunks outside of `createSlice` as always, and most async thunks don't need `dispatch` or `getState` - they just fetch data and return. And finally, setting up a custom `createSlice` allows you to opt into `createAsyncThunk` being included in your bundle size (though it may already be included if used directly or as part of RTK Query - in either of these cases there's no _additional_ bundle size).
@@ -628,7 +628,75 @@ We've updated RTK to depend on the final Immer 10.0 release.
 
 ## Recommendations
 
+Based on changes in 2.0 and previous versions, there have been some shifts in thinking that are good to know about, if non-essential.
+
 ### Alternatives to `actionCreator.toString()`
+
+As part of RTK's original API, action creators made with `createAction` have a custom `toString()` override that returns the action type.
+
+This was primarily useful for the ([now removed](#object-syntax-for-createsliceextrareducers-and-createreducer-removed)) object syntax for `createReducer`:
+
+```ts
+const todoAdded = createAction<Todo>('todos/todoAdded')
+
+createReducer(initialState, {
+  [todoAdded]: (state, action) => {}, // toString called here, 'todos/todoAdded'
+})
+```
+
+While this was convenient (and other libraries in the Redux ecosystem such as `redux-saga` and `redux-observable` have supported this to various capacities), it didn't play well with Typescript and was generally a bit too "magic".
+
+```ts
+const test = todoAdded.toString()
+//    ^? typed as string, rather than specific action type
+```
+
+Over time, the action creator also gained a static `type` property and `match` method which were more explicit and worked better with Typescript.
+
+```ts
+const test = todoAdded.type
+//    ^? 'todos/todoAdded'
+
+// acts as a type predicate
+if (todoAdded.match(unknownAction)) {
+  unknownAction.payload
+  // ^? now typed as PayloadAction<Todo>
+}
+```
+
+For compatibility, this override is still in place, but we encourage considering using either of the static properties for more understandable code.
+
+For example, with `redux-saga`:
+
+```ts
+// before (still works)
+yield takeEvery(todoAdded, saga)
+
+// consider
+yield takeEvery(todoAdded.match, saga)
+// or
+yield takeEvery(todoAdded.type, saga)
+```
+
+With `redux-observable`:
+
+```ts
+// before (works in runtime, will not filter types properly)
+const epic = (action$: Observable<Action>) =>
+  action$.pipe(
+    ofType(todoAdded),
+    map((action) => action)
+    //   ^? still Action<any>
+  )
+
+// consider (better type filtering)
+const epic = (action$: Observable<Action>) =>
+  action$.pipe(
+    filter(todoAdded.match),
+    map((action) => action)
+    //   ^? now PayloadAction<Todo>
+  )
+```
 
 ## Future plans
 
