--- a/docs/migrations/1.x-to-2.x.md
+++ b/docs/migrations/1.x-to-2.x.md
@@ -666,19 +666,7 @@ if (todoAdded.match(unknownAction)) {
 
 For compatibility, this override is still in place, but we encourage considering using either of the static properties for more understandable code.
 
-For example, with `redux-saga`:
-
-```ts
-// before (still works)
-yield takeEvery(todoAdded, saga)
-
-// consider
-yield takeEvery(todoAdded.match, saga)
-// or
-yield takeEvery(todoAdded.type, saga)
-```
-
-With `redux-observable`:
+For example, with `redux-observable`:
 
 ```ts
 // before (works in runtime, will not filter types properly)
@@ -696,6 +684,18 @@ const epic = (action$: Observable<Action>) =>
     map((action) => action)
     //   ^? now PayloadAction<Todo>
   )
+```
+
+With `redux-saga`:
+
+```ts
+// before (still works)
+yield takeEvery(todoAdded, saga)
+
+// consider
+yield takeEvery(todoAdded.match, saga)
+// or
+yield takeEvery(todoAdded.type, saga)
 ```
 
 ## Future plans
