--- a/docs/migrations/1.x-to-2.x.md
+++ b/docs/migrations/1.x-to-2.x.md
@@ -813,7 +813,7 @@ In 2.0.0 we have no set solution for this - a few APIs have been floated ([PR 1]
 
 ### 3.0 - RTK Query
 
-RTK 2.0 was largely focused on core and toolkit changes. Now that 2.0 is released, we would like to shift our focus to RTK Query, as there is still some rough edges to iron out - some of which may require breaking changes, necessitating a 3.0 release.
+RTK 2.0 was largely focused on core and toolkit changes. Now that 2.0 is released, we would like to shift our focus to RTK Query, as there are still some rough edges to iron out - some of which may require breaking changes, necessitating a 3.0 release.
 
 If you have any feedback for what that could look like, please consider chiming in at the [RTK Query API pain points and rough spots feedback thread](https://github.com/reduxjs/redux-toolkit/issues/3692)!
 
